New and simple to use cairo-based Canvas (View)
(bzr r364.2.1)

--- a/NuxImage/Makefile.am
+++ b/NuxImage/Makefile.am
@@ -26,12 +26,14 @@ libnux_image_@NUX_API_VERSION@_la_LDFLAGS = \
 source_h = \
   $(srcdir)/BitmapFormats.h \
   $(srcdir)/CairoGraphics.h \
+  $(srcdir)/Canvas.h \
   $(srcdir)/ImageSurface.h \
   $(srcdir)/GdkGraphics.h
 
 source_cpp = \
   $(srcdir)/BitmapFormats.cpp \
   $(srcdir)/CairoGraphics.cpp \
+  $(srcdir)/Canvas.cpp \
   $(srcdir)/ImageSurface.cpp \
   $(srcdir)/GdkGraphics.cpp
 
