--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -4,6 +4,7 @@ check_PROGRAMS = \
 
 # Please keep alphabetical
 test_nux_SOURCES = \
+  test-canvas.cpp \
   test-nux.cpp \
   test-timeline.cpp \
   test-object.cpp \
