* debian/control:   - add new libxdamage-dev and libxcomposite-dev build-dep
(bzr r159.1.83)

--- a/debian/control
+++ b/debian/control
@@ -13,6 +13,8 @@ Build-Depends: debhelper (>= 7.0.50~),
                libglewmx1.5-dev,
                libxxf86vm-dev,
                libgl1-mesa-dev (>= 7.9~git20100924-0ubuntu3),
+               libxdamage-dev,
+               libxcomposite-dev,
                libsigc++-2.0-dev,
                libpango1.0-dev,
                libx11-dev,
