Make tests optional to allow for gtest not being in main
(bzr r370)

--- a/configure.ac
+++ b/configure.ac
@@ -172,17 +172,29 @@ AC_SUBST(UNITY_SUPPORT_TEST_CFLAGS)
 AC_SUBST(UNITY_SUPPORT_TEST_LIBS)
 
 dnl ************************************
-dnl Check for googletest and googlemock
+dnl Enable/disable tests
 dnl ************************************
 
-AC_LANG_PUSH([C++])
-AC_CHECK_HEADER([gtest/gtest.h],
-                [],
-                [AC_MSG_ERROR([you are missing google-test, apt-get install libgtest-dev])])
-AC_CHECK_HEADER([gmock/gmock.h],
-                [],
-                [AC_MSG_ERROR([you are missing google-mock, apt-get install google-mock])])
-AC_LANG_POP([C++])
+AC_ARG_ENABLE([tests],
+              [AC_HELP_STRING([--enable-tests=@<:@no/yes@:>@],
+              [Enable Nux Testing @<:@default=yes@:>@])],
+              [],
+              [enable_tests=yes])
+AS_IF([test "x$enable_tests" = "xyes"],
+      [
+       # Check for googletest and googlemock
+       AC_LANG_PUSH([C++])
+       AC_CHECK_HEADER([gtest/gtest.h],
+                       [],
+                       [AC_MSG_ERROR([you are missing google-test, apt-get install libgtest-dev])])
+       AC_CHECK_HEADER([gmock/gmock.h],
+                       [],
+                       [AC_MSG_ERROR([you are missing google-mock, apt-get install google-mock])])
+       AC_LANG_POP([C++])
+      ]
+)
+AM_CONDITIONAL(BUILD_TESTS, [test "x$enable_tests" = "xyes"])
+
 
 dnl ===========================================================================
 
@@ -334,6 +346,7 @@ echo -e "${RESET}"
 echo -e "${GREEN} • Misc Options:${RESET}"
 echo -e "        Build Examples    : ${BOLD_WHITE}${enable_examples}${RESET}"
 echo -e "        Build Gpu Tests   : ${BOLD_WHITE}${enable_gputests}${RESET}"
+echo -e "        Build Nux Tests   : ${BOLD_WHITE}${enable_tests}${RESET}"
 echo ""
 
 echo -e "${RESET}"
