add new libboost1.42-dev dep as well, should be transitionned to 1.46 once compiz is transitionned as well
(bzr r159.1.87)

--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Build-Depends: debhelper (>= 7.0.50~),
                doxygen,
                libglib2.0-dev (>= 2.25.14),
                libgdk-pixbuf2.0-dev,
+               libboost1.42-dev,
                libcairo2-dev (>= 1.9.14),
                libpng12-dev (>= 1.2.44),
                libglew1.5-dev,               
