--- a/debian/control
+++ b/debian/control
@@ -21,18 +21,17 @@ Build-Depends: debhelper (>= 7.0.50~),
                libx11-dev,
                libpcre3-dev,
                libpci-dev,
-Standards-Version: 3.9.1
+Standards-Version: 3.9.2
 Section: libs
 Homepage: http://launchpad.net/nux
 Vcs-Bzr: https://code.launchpad.net/~ubuntu-desktop/nux/ubuntu
 
-Package: libnux-0.9-0
+Package: libnux-1.0-0
 Section: libs
 Architecture: any
-Depends: libnux-0.9-common (= ${source:Version}),
+Depends: libnux-1.0-common (= ${source:Version}),
          ${shlibs:Depends},
          ${misc:Depends}
-Breaks: unity (<< 3.8.6)
 Description: Visual rendering toolkit for real-time applications - shared lib
  Nux is a graphical user interface toolkit for applications that mixes opengl
  hardware acceleration with high quality visual rendering.
@@ -50,16 +49,17 @@ Description: Visual rendering toolkit for real-time applications - tools
  .
  This package contains various tools for nux
 
-Package: libnux-0.9-dev
+Package: libnux-1.0-dev
 Section: libdevel
 Architecture: any
-Depends: libnux-0.9-0 (= ${binary:Version}),
+Depends: libnux-1.0-0 (= ${binary:Version}),
          libglib2.0-dev (>= 2.25.14),
          libgdk-pixbuf2.0-dev,
          libcairo2-dev (>= 1.9.14),
          libpng12-dev (>= 1.2.44),
          libglew1.5-dev,
          libglewmx1.5-dev,
+         libboost1.42-dev,
          libxxf86vm-dev,
          libgl1-mesa-dev,
          libsigc++-2.0-dev,
@@ -72,7 +72,7 @@ Description: Visual rendering toolkit for real-time applications - dev files
  .
  This package contains files that are needed to build applications.
 
-Package: libnux-0.9-common
+Package: libnux-1.0-common
 Section: libs
 Architecture: all
 Depends: ${misc:Depends}
@@ -82,12 +82,12 @@ Description: Visual rendering toolkit for real-time applications - common files
  .
  This package contains common architecture files used by the library.
 
-Package: libnux-0.9-doc
+Package: libnux-1.0-doc
 Section: doc
 Architecture: all
 Depends: ${misc:Depends},
          ${misc:Depends}
-Suggests: libnux-0.9-dev,
+Suggests: libnux-1.0-dev,
           doxygen
 Description: Visual rendering toolkit for real-time applications - documentation
  Nux is a graphical user interface toolkit for applications that mixes opengl
