--- a/NuxGraphics/Makefile.am
+++ b/NuxGraphics/Makefile.am
@@ -56,6 +56,7 @@ source_h = \
   $(srcdir)/GraphicsDisplay.h \
   $(srcdir)/GraphicsEngine.h \
   $(srcdir)/MeshData.h \
+  $(srcdir)/MeshFileLoader-OBJ.h \
   $(srcdir)/IOpenGLAnimatedTexture.h \
   $(srcdir)/IOpenGLAsmShader.h \
   $(srcdir)/IOpenGLBaseTexture.h \
@@ -114,6 +115,7 @@ source_cpp = \
   $(srcdir)/GraphicsDisplayX11.cpp \
   $(srcdir)/GraphicsEngine.cpp \
   $(srcdir)/MeshData.cpp \
+  $(srcdir)/MeshFileLoader-OBJ.cpp \
   $(srcdir)/IOpenGLAnimatedTexture.cpp \
   $(srcdir)/IOpenGLAsmShader.cpp \
   $(srcdir)/IOpenGLBaseTexture.cpp \
