Update the rolling file appender tests.
(bzr r356.4.35)

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -33,7 +33,7 @@ test_nux_LDADD = \
   $(NUX_LIBS)
 
 gtest_nux_core_SOURCES = \
-  FileHelpers.cpp \
+  Helpers.cpp \
   test_main.cpp \
   test_async_file_writer.cpp \
   test_logger.cpp \
