Remove the boost-filesystem library from Nux as it isn't needed (and added in error).
(bzr r394)

--- a/Nux/Makefile.am
+++ b/Nux/Makefile.am
@@ -23,7 +23,7 @@ libnux_@NUX_API_VERSION@_la_LIBADD = \
   $(NUX_LIBS)
 
 libnux_@NUX_API_VERSION@_la_LDFLAGS = \
-  $(NUX_LT_LDFLAGS) -lboost_filesystem
+  $(NUX_LT_LDFLAGS)
 
 source_cpp = \
   $(srcdir)/PropertyItem/CheckBoxProperty.cpp \
