Added class nux::CairoWrapper to complement nux::Canvas, also added GTest-based unit-tests... caused much grief
(bzr r409.3.1)

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -9,6 +9,7 @@ if BUILD_EXAMPLES
 
 noinst_PROGRAMS = button \
                   cairo \
+                  cairo_wrapper \
                   canvas \
                   checkbox \
                   combobox \
@@ -56,6 +57,8 @@ combobox_SOURCES = combobox.cpp
 combobox_LDADD = $(ALL_LIBS)
 cairo_SOURCES = cairo.cpp
 cairo_LDADD = $(ALL_LIBS)
+cairo_wrapper_SOURCES = cairo_wrapper.cpp
+cairo_wrapper_LDADD = $(ALL_LIBS)
 canvas_SOURCES = canvas.cpp
 canvas_LDADD = $(ALL_LIBS)
 textedit_SOURCES = textedit.cpp
