--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -56,6 +56,9 @@ gtest_nux_core_CPPFLAGS = \
 
 gtest_nux_core_LDADD = \
   $(top_builddir)/NuxCore/libnux-core-@NUX_API_VERSION@.la \
+  $(top_builddir)/NuxImage/libnux-image-@NUX_API_VERSION@.la \
+  $(top_builddir)/NuxGraphics/libnux-graphics-@NUX_API_VERSION@.la \
+  $(top_builddir)/Nux/libnux-@NUX_API_VERSION@.la \
   $(NUX_LIBS)
 
 gtest_nux_core_LDFLAGS = \
