fix install of CairoWrapper.h, disabled tests for CairoWrapper for the moment
(bzr r419)

--- a/Nux/Makefile.am
+++ b/Nux/Makefile.am
@@ -198,6 +198,7 @@ source_h = \
   $(srcdir)/BezierCurveControl2.h \
   $(srcdir)/Button.h \
   $(srcdir)/Canvas.h \
+  $(srcdir)/CairoWrapper.h \
   $(srcdir)/CheckBox.h \
   $(srcdir)/ClientArea.h \
   $(srcdir)/ColorArea.h \
