--- a/debian/rules
+++ b/debian/rules
@@ -19,4 +19,4 @@ override_dh_install:
 override_dh_auto_test:
 
 override_dh_makeshlibs:
-	dh_makeshlibs -V 'libnux-1.0-0 (>= 1.6.0-0), libnux-1.0-0 (<< 1.6.2)'
+	dh_makeshlibs -V 'libnux-1.0-0 (>= 1.8.0-0)'
