Fix typo in configure.ac
(bzr r468)

--- a/configure.ac
+++ b/configure.ac
@@ -333,23 +333,23 @@ echo -e "${BOLD_GREEN} Nux - $VERSION"
 echo -e "${RESET}"
 
 echo -e "${GREEN} • Global:${RESET}"
-echo -e "        Prefix            : ${BOLD_WHITE}${prefix}"
+echo -e "        Prefix             : ${BOLD_WHITE}${prefix}"
 
 echo -e "${RESET}"
 echo -e "${GREEN} • Compiler Options:${RESET}"
-echo -e "        CFLAGS            : ${BOLD_WHITE}${CFLAGS} ${GCC_FLAGS}${RESET}" 
-echo -e "        Maintainer CFlags : ${BOLD_WHITE}${MAINTAINER_CFLAGS}${RESET}"
-echo -e "        Debug Mode        : ${BOLD_WHITE}${enable_debug}${RESET}"
+echo -e "        CFLAGS             : ${BOLD_WHITE}${CFLAGS} ${GCC_FLAGS}${RESET}" 
+echo -e "        Maintainer CFlags  : ${BOLD_WHITE}${MAINTAINER_CFLAGS}${RESET}"
+echo -e "        Debug Mode         : ${BOLD_WHITE}${enable_debug}${RESET}"
 
 echo -e "${RESET}"
 echo -e "${GREEN} • Documentation:${RESET}"
-echo -e "        Build Documenation: ${BOLD_WHITE}${enable_documentation}${RESET}"
+echo -e "        Build Documentation: ${BOLD_WHITE}${enable_documentation}${RESET}"
 
 echo -e "${RESET}"
 echo -e "${GREEN} • Misc Options:${RESET}"
-echo -e "        Build Examples    : ${BOLD_WHITE}${enable_examples}${RESET}"
-echo -e "        Build Gpu Tests   : ${BOLD_WHITE}${enable_gputests}${RESET}"
-echo -e "        Build Nux Tests   : ${BOLD_WHITE}${enable_tests}${RESET}"
+echo -e "        Build Examples     : ${BOLD_WHITE}${enable_examples}${RESET}"
+echo -e "        Build Gpu Tests    : ${BOLD_WHITE}${enable_gputests}${RESET}"
+echo -e "        Build Nux Tests    : ${BOLD_WHITE}${enable_tests}${RESET}"
 echo ""
 
 echo -e "${RESET}"
