Determine strut positioning relative to monitor position. Fixes LP #861341
Fixes LP: #861341

(bzr r477.2.1)

--- a/configure.ac
+++ b/configure.ac
@@ -143,6 +143,7 @@ PKG_CHECK_MODULES(NUX_GRAPHICS,
                   glewmx
                   xxf86vm
                   sigc++-2.0
+		  xinerama
                   )
 AC_SUBST(NUX_GRAPHICS_CFLAGS)
 AC_SUBST(NUX_GRAPHICS_LIBS)
