--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -2,7 +2,8 @@ if BUILD_TESTS
 check_PROGRAMS = \
   test-nux \
   gtest-nux-core \
-  test-graphics-display
+  test-graphics-display \
+  test-empty-window
 
 # Please keep alphabetical
 test_nux_SOURCES = \
@@ -68,14 +69,10 @@ gtest_nux_core_LDFLAGS = \
   -lboost_filesystem -lboost_system
 
 
-test_graphics_display_SOURCES = \
-  test_graphics_display.cpp
-
-test_graphics_display_CPPFLAGS = \
-  -I$(srcdir) \
+TestFlags = -I$(srcdir) \
   -I$(top_srcdir) \
   -DPREFIX=\""$(prefix)"\" \
-	-DLIBDIR=\""$(libdir)"\" \
+  -DLIBDIR=\""$(libdir)"\" \
   -DDATADIR=\""$(datadir)"\" \
   -DG_LOG_DOMAIN=\"NuxTests\" \
   -DTESTDIR=\""$(top_srcdir)/tests"\" \
@@ -85,27 +82,41 @@ test_graphics_display_CPPFLAGS = \
   $(NUX_CFLAGS) \
   $(MAINTAINER_CFLAGS)
 
-test_graphics_display_LDADD = \
-  $(top_builddir)/NuxCore/libnux-core-@NUX_API_VERSION@.la \
+TestLibs = $(top_builddir)/NuxCore/libnux-core-@NUX_API_VERSION@.la \
   $(top_builddir)/NuxImage/libnux-image-@NUX_API_VERSION@.la \
   $(top_builddir)/NuxGraphics/libnux-graphics-@NUX_API_VERSION@.la \
   $(top_builddir)/Nux/libnux-@NUX_API_VERSION@.la \
   $(NUX_LIBS)
 
-test_graphics_display_LDFLAGS = \
-  -lpthread
+
+test_graphics_display_SOURCES = test_graphics_display.cpp
+
+test_graphics_display_CPPFLAGS = $(TestFlags)
+test_graphics_display_LDADD = $(TestLibs)
+test_graphics_display_LDFLAGS = -lpthread
+
+test_empty_window_SOURCES = test_empty_window.cpp
+
+test_empty_window_CPPFLAGS = $(TestFlags)
+test_empty_window_LDADD = $(TestLibs)
+test_empty_window_LDFLAGS = -lpthread
 
 
 #run make test as part of make check
-check-local: test gtest test-apps
+check-local: test gtest test0 test1 
+
 test:
 	@gtester --verbose -k -o=test-nux-results.xml ./test-nux
 
 gtest: gtest-nux-core
 	./gtest-nux-core
 
-test-apps: test-graphics-display
+test0: test-graphics-display
 	./test-graphics-display
+
+test1: test-empty-window
+	./test-empty-window
+
 
 check-report:
 	@gtester -k -o=test-nux-results.xml -k ./test-nux \
@@ -115,7 +126,7 @@ check-report:
 		&& gnome-open ./test-nux-results.html
 
 full-report:
-		@gtester -k -o=test-nux-results.xml -k -m=slow ./test-nux \
+	@gtester -k -o=test-nux-results.xml -k -m=slow ./test-nux \
 	  && ( gtester-report test-nux-results.xml \
 	      | sed 's/>GTester Unit Test Report</>GTester Unit Test Report (normal)</' \
 	      > test-nux-results.html )
