Don't build anymore the documentation and don't gputests files
(bzr r159.1.141)

--- a/debian/rules
+++ b/debian/rules
@@ -14,6 +14,7 @@ override_dh_auto_configure:
 
 override_dh_install:
 	rm debian/tmp/usr/lib/*la
+	rm -rf debian/usr/share/nux/gputests/
 	dh_install --fail-missing
 
 override_dh_auto_test:
