* Nux/ABI.h is now generated from ABI.h.in during the configure process
(bzr r524.1.2)

--- a/Nux/ABI.h.in
+++ b/Nux/ABI.h.in
@@ -9,7 +9,7 @@
 // So far there is no provision for more than one break in a day.
 
 
-#define NUX_ABIVERSION 20111201
+#define NUX_ABIVERSION @NUX_ABI_VERSION@
 
 
 
