* debian/rules, debian/control:   - add nuxabiversion capability as upstream is breaking a lot the ABI     wasn't bumping the soname. Create a virtual package similar to what     we already do in compiz to ensure we dep on the right version.     Remove the makeshlibs override then as not needed anymore.
(bzr r159.1.144)

--- a/debian/control
+++ b/debian/control
@@ -35,6 +35,7 @@ Architecture: any
 Depends: libnux-1.0-common (= ${source:Version}),
          ${shlibs:Depends},
          ${misc:Depends}
+Provides: libnux-abiversion-${nuxabiversion}
 Breaks: unity (<< 4.10.0-0ubuntu2)
 Description: Visual rendering toolkit for real-time applications - shared lib
  Nux is a graphical user interface toolkit for applications that mixes opengl
