--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -7,7 +7,8 @@ if BUILD_EXAMPLES
 # This tells automake that we want to build binaries, but they shouldn't be
 # installed. For each individual example, add it's binary name here
 
-noinst_PROGRAMS = text_entry_focus
+noinst_PROGRAMS = text_entry_focus \
+  shortcut_keys
 
 #button \
 #                  cairo \
@@ -96,6 +97,10 @@ ALL_LIBS = \
 
 text_entry_focus_SOURCES = text_entry_focus.cpp
 text_entry_focus_LDADD = $(ALL_LIBS)
+
+shortcut_keys_SOURCES = shortcut-keys.cpp line-separator.cpp line-separator.h abstract-separator.h abstract-separator.cpp
+shortcut_keys_LDADD = $(ALL_LIBS)
+
 
 # To distribute source add the source code here
 #sourceexampledir = "$(pkgdatadir)/examples"
