--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -6,7 +6,8 @@ check_PROGRAMS = \
   test-empty-window \
   button-xtest \
   mouse-events-test \
-  mouse-buttons-test
+  mouse-buttons-test \
+  key-navigation-test
 
 # Please keep alphabetical
 test_nux_SOURCES = \
@@ -138,6 +139,20 @@ mouse_buttons_test_CPPFLAGS = $(TestFlags)
 mouse_buttons_test_LDADD = $(TestLibs)
 mouse_buttons_test_LDFLAGS = -lpthread -lXtst
 
+key_navigation_test_SOURCES = key-navigation-test.cpp \
+  nux_test_framework.cpp \
+  nux_test_framework.h \
+  nux_automated_test_framework.cpp \
+  nux_automated_test_framework.h \
+  test-view.cpp \
+  test-view.h
+
+key_navigation_test_CPPFLAGS = $(TestFlags)
+key_navigation_test_LDADD = $(TestLibs)
+key_navigation_test_LDFLAGS = -lpthread -lXtst
+
+
+
 #run make test as part of make check
 check-local: test gtest test-apps
 
@@ -147,12 +162,13 @@ test:
 gtest: gtest-nux-core
 	./gtest-nux-core
 
-test-apps: test-graphics-display test-empty-window button-xtest mouse-events-test mouse-buttons-test
+test-apps: test-graphics-display test-empty-window button-xtest mouse-events-test mouse-buttons-test key-navigation-test
 	./test-graphics-display
 	./test-empty-window
 	./button-xtest
 	./mouse-events-test
 	./mouse-buttons-test
+	./key-navigation-test
 
 check-report:
 	@gtester -k -o=test-nux-results.xml -k ./test-nux \
