* Add dependency to ibus-1.0 * build fixes
(bzr r528.2.3)

--- a/Nux/Makefile.am
+++ b/Nux/Makefile.am
@@ -57,6 +57,8 @@ source_cpp = \
   $(srcdir)/HLayout.cpp \
   $(srcdir)/HScrollBar.cpp \
   $(srcdir)/HSplitter.cpp \
+  $(srcdir)/InputMethodContext.cpp \
+  $(srcdir)/InputMethodIBus.cpp \
   $(srcdir)/IntegerValidator.cpp \
   $(srcdir)/View.cpp \
   $(srcdir)/KeyboardHandler.cpp \
@@ -67,7 +69,6 @@ source_cpp = \
   $(srcdir)/MenuPage.cpp \
   $(srcdir)/MenuBar.cpp \
   $(srcdir)/MouseAreaCtrl.cpp \
-  $(srcdir)/MouseHandler.cpp \
   $(srcdir)/NumericValuator.cpp \
   $(srcdir)/Nux.cpp \
   $(srcdir)/NuxGlobalInitializer.cpp \
@@ -138,6 +139,8 @@ source_h = \
   $(srcdir)/HLayout.h \
   $(srcdir)/HScrollBar.h \
   $(srcdir)/HSplitter.h \
+  $(srcdir)/InputMethodContext.h \
+  $(srcdir)/InputMethodIBus.h \
   $(srcdir)/IntegerValidator.h \
   $(srcdir)/View.h \
   $(srcdir)/KeyboardHandler.h \
@@ -147,7 +150,6 @@ source_h = \
   $(srcdir)/MenuPage.h \
   $(srcdir)/MenuBar.h \
   $(srcdir)/MouseAreaCtrl.h \
-  $(srcdir)/MouseHandler.h \
   $(srcdir)/NumericValuator.h \
   $(srcdir)/Nux.h \
   $(srcdir)/NuxGlobalInitializer.h \
